--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,7 @@
   --font-mono: var(--font-geist-mono);
 }
 
-:root {
-  --background: #333;
-  --foreground: #fff;
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
+  @apply bg-gray-950 text-gray-50;
   font-family: Arial, Helvetica, sans-serif;
 }
